--- a/docs/unit6.mdx
+++ b/docs/unit6.mdx
@@ -33,12 +33,20 @@ console.log("Hello, World!");
 
 ### Variables
 
-Variables are dynamically-typed, meaning, they don't have a type (like in Python). Undefined variables have the value `undefined`. We use `let` and `const` to define variables.
+Variables are dynamically-typed, meaning, they don't have a type (like in Python). Undefined variables have the value `undefined`. We use the keywords `var`, `let` and `const` to define variables.
+
+| Keyword | Behavior |
+| --- | --- |
+| var | Defines a variable globally. |
+| let | Defines a variable limited in scope to the block. | 
+| const | Defines a variable limited in scope to the block, but its value is constant.  |
+
 
 ```javascript
 let x = 'hello';
 let y = 1234;
 let z = false;
+var a = 'abc' // Defined globally. 
 const pi = '3.14'; //this variable cannot ever be changed.
 ```
 
@@ -61,6 +69,23 @@ while (true) {
 	console.log("repeat");
 }
 ```
+
+We can also use for-each loops in javascript, but only for arrays. 
+```javascript
+const array = ["one", "two", "three"]
+array.forEach(function (item, index) {
+  console.log(item, index);
+});
+```
+
+In fact, JavaScript also has something cool called a for-of loop. This lets us loop through iterables like strings and arrays.
+```javascript
+const str = "fellowship"
+for (const element of str) {
+  console.log(element);
+}
+```
+
 
 ### Strings
 
