Created assignment for unit 6

--- a/docs/.unit7.mdx
+++ b/docs/.unit7.mdx
@@ -341,31 +341,7 @@ function Example(props) {
 ```
 
 ## Setting up React
-
-We will be using `nvm` to install Node. Nvm makes it easier to jump between versions of node, which you will need for some projects. 
-
-Open up your terminal and run this command. 
-
-```bash
-curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-```
-
-Close and re-open your terminal, and nvm will be installed. 
-
-We will be using version 16.13.2 of node so run these commands. 
-
-```bash
-nvm install node
-nvm install v16.13.2
-```
-
-You can check node is installed with this command. 
-
-```bash
-node --version
-```
-
-Now that node is installed, it also comes with `npm` a package manager for node. `npx` is a package runner that is pre-bundled with `npm`. We use `npx` to create our first react app. 
+With node installed, it also comes with `npm` a package manager for node. `npx` is a package runner that is pre-bundled with `npm`. We use `npx` to create our first react app. 
 
 Navigate to a directory where you want to create your project. Then, run the command: 
 
